# c64commander

./: .dockerignore  .gitignore  .mcp.json  .nycrc  .ort.yml  .prettierignore  .prettierrc.json  AGENTS.md  CI_REPORT.md  Dockerfile  Dockerfile.web  EVIDENCE_VERIFICATION.md  PLANS.md  PLAYWRIGHT_TEST_EXPANSION_RESULTS.md  PLAYWRIGHT_UI_AUDIT.md  README.md  REVIEW.md  TEST_COVERAGE_SUMMARY.md  TEST_ENHANCEMENT_SUMMARY.md  THIRD_PARTY_NOTICES.md  WORKLOG.md  apt-packages-web.txt  apt-packages.txt  build  bun.lockb  capacitor.config.ts  codecov.yml  config.toml  eslint.config.js  index.html  local-build.sh  log  mobile-mcp  package-lock.json  package.json  plans.md  playwright.config.ts  tailwind.config.ts  test-coverage.js  tsconfig.app.json  (+5 more)
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  actionlint.yml  copilot-instructions.md  dependabot.yml
.maestro/: config.yaml  edge-auto-advance-format-matrix.yaml  edge-auto-advance-lock.yaml  edge-button-highlight-timeout.yaml  edge-config-persistence.yaml  edge-home-cpu-speed-latency.yaml  edge-hvsc-ingest-lifecycle.yaml  edge-hvsc-repeat-cancel-resume.yaml  edge-offline.yaml  edge-playlist-manipulation.yaml  edge-ram-restore-chunked.yaml  edge-volume-mute-race.yaml  (+38 more)
agents/: README.md  pyproject.toml
agents/src/openhands/: __init__.py  cli.py  config.py  logging_utils.py  providers.py  run_loop.py  state.py  tools.py
agents/state/: README.md
agents/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_logging_utils.py  test_providers.py  test_run_loop.py  test_state.py  test_tools.py
doc/: db.md  (+17 more)
(+4100 files in other folders)
